# small-object-detection

./: .gitattributes  README.md  fusenet_cross_train.py  fusenet_cross_visualize.py  fusenet_label_visualize.py  fusenet_newdata_visualize.py  fusenet_solver.py  fusenet_train.py  fusenet_visualize.py  iou.txt  model.py  onnx_bushu.py  pytorch_to_onnx.py  rename.py  resize_iou.txt
label_solver/: label_resize.py  label_solver.py
models/: fusenet_model.py
ncnn_demo/: CMakeCache.txt  CMakeLists.txt  Makefile  Test.txt  cmake_install.cmake  demo
ncnn_demo/src/: 1.cpp  CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  mobile_best_sim.id.h  mobile_sim.id.h  mobile_sim.param
options/: base_options.py  test_options.py  train_options.py
utils/: data_utils.py  fusenet_cross_validate.py  loss_utils.py
